---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_mlir_fail_todo/extern_fun.arc

---
extern fun increment(x: i32): i32;
task Adder() ~i32 by i32 -> ~i32 by i32 {
    extern fun addition(x: i32, y: i32): i32;
    on event by key => {
        emit addition(event, event) by key
    }
}
fun pipe(s: ~i32 by i32): ~i32 by i32 {
    if increment(1) == 2 {
        Adder()(s)
    } else {
        Adder()(s)
    }
}

